example/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: nginx
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: hello.adiatma.tech
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hello.adiatma.tech
    secretName: hello.adiatma.tech
